<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:background="@color/background"
                android:layout_height="match_parent">

    <Button
        android:id="@+id/btnFillingsDiary"
        android:onClick="clickBtnFillingsDiary"
        android:layout_width="match_parent"
        android:layout_above="@+id/btnWayBeginning"
        style="@style/Widget.Button.MainMenu"
        android:text="@string/feelings_diary"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/btnWayBeginning"
        android:onClick="clickBtnWayBeginning"
        android:layout_width="match_parent"
        android:layout_above="@+id/layout12"
        style="@style/Widget.Button.MainMenu"
        android:text="@string/way_beginning"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:id="@+id/layout12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnCalendar">
        <Button
            android:id="@+id/btnSteps"
            android:onClick="clickBtnSteps"
            android:layout_weight="1"
            android:layout_above="@+id/btnCalendar"
            style="@style/Widget.Button.MainMenu"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="0dp"
            android:textSize="17sp"
            android:text="@string/steps"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btnTraditions"
            android:onClick="clickBtnTraditions"
            android:layout_weight="1"
            android:layout_above="@+id/btnSteps"
            style="@style/Widget.Button.MainMenu"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:textSize="17sp"
            android:text="@string/traditions"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btnPromises"
            android:onClick="clickBtnPromises"
            android:layout_weight="1"
            android:layout_above="@+id/btnTraditions"
            style="@style/Widget.Button.MainMenu"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="5dp"
            android:textSize="17sp"
            android:text="@string/promises"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <Button
        android:id="@+id/btnCalendar"
        android:onClick="clickBtnCalendar"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        style="@style/Widget.Button.MainMenu"
        android:text="@string/calendar"
        android:layout_height="wrap_content"/>
</RelativeLayout>