<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:background="@color/background"
                android:layout_height="match_parent">

    <LinearLayout
            android:id="@+id/layoutTimeButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_above="@+id/btnFeelings">

        <Button android:id="@+id/feelTimeFrom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="clickBtnTimeFrom"
                style="@style/Widget.Button.MainMenu"
                android:layout_weight="1"
                android:text="@string/time_from"
                android:textSize="18sp"/>
        <Button android:id="@+id/feelTimeTo"
                android:onClick="clickBtnTimeTo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.Button.MainMenu"
                android:layout_weight="1"
                android:text="@string/time_to"
                android:textSize="18sp"/>

    </LinearLayout>

    <Button android:id="@+id/btnFeelings"
            android:onClick="clickBtnFeelings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/RateDescription"
            android:text="@string/add_fillings"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            style="@style/Widget.Button.MainMenu"/>

    <TextView android:id="@+id/RateDescription"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dp"
              android:layout_above="@+id/feelingsRating"
              android:textColor="#ffff5003"
              android:textSize="20sp"
              android:text="@string/Rate_how_myltc"/>

    <RatingBar android:id="@+id/feelingsRating"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_above="@+id/btnComment"/>

    <Button android:id="@+id/btnComment"
            android:onClick="clickBtnAddComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/add_comment"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            style="@style/Widget.Button.MainMenu"/>

</RelativeLayout>